Fix login password eye toggle visibility

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,11 @@ body,
   height: 100%;
 }
 
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear {
+  display: none;
+}
+
 @layer utilities {
   .animate-delay-100 {
     animation-delay: 100ms;
